# quant-kwan

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_CODE_PROMPT.md  ONBOARDING.md  README.md  README_SUBMISSION.md  Test_01.md  merge_codes.py  pyproject.toml  quant.py
config/: pair_watch_rules.yml  pair_watch_universe.yml  sector_cycle_rules.yml  sources.example.yml  supply_chain_rules.yml  ticker_aliases.yml  watchlist.yml
docs/: DATA_MIGRATION.md  HANDOVER.md  MODERNIZATION_PLAN.md  PRESENTATION_OUTLINE.md  PRESENTATION_SCRIPT.md  PROJECT_STATE.md  RUNBOOK_WINDOWS.md  SEUNGHWAN_STRATEGY.md
model/: __init__.py  base_model.py  cointegration.py  feature_builder.py  latent_stress_model.py  lightgbm_model.py  manager.py  promotion_engine.py  sarimax.py
prompts/: digest.md
scripts/: build_full_coverage.py  expand_tickers.py  install_ollama_models.sh  list_telegram_chats.sh  run_once.sh  setup_wsl.sh
systemd/: tele-quant-alpha-review-kr.service  tele-quant-alpha-review-kr.timer  tele-quant-alpha-review-us.service  tele-quant-alpha-review-us.timer  tele-quant-backlog-kr.service  tele-quant-backlog-kr.timer  tele-quant-backlog-report.service  tele-quant-backlog-report.timer  tele-quant-backlog-us.service  tele-quant-backlog-us.timer  tele-quant-briefing-kr.service  tele-quant-briefing-kr.timer  tele-quant-briefing-us.service  tele-quant-briefing-us.timer  tele-quant-daily-alpha-kr-intraday-10.service  tele-quant-daily-alpha-kr-intraday-10.timer  tele-quant-daily-alpha-kr-intraday-14.service  tele-quant-daily-alpha-kr-intraday-14.timer  tele-quant-daily-alpha-kr.service  (+21 more)
(+173 files in other folders)
