[project]
name = "tele-quant"
version = "0.1.0"
description = "Telegram analyst/news collector + local Ollama digest bot for macro, US equities, and Korean equities."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "kwanni" }]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "finance-datareader>=0.9.202",
  "httpx>=0.27.2",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.1",
  "pykrx>=1.2.8",
  "pypdf>=5.1.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "rapidfuzz>=3.10.1",
  "rich>=13.9.2",
  "telethon>=1.38.1",
  "typer>=0.12.5",
  "yfinance>=0.2.48",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.2",
]

[project.scripts]
tele-quant = "tele_quant.cli:app"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
